--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
 }
 
 .min-vh-lg-100 {
-    min-height: 100vh;
+    min-height: 100vh !important;
 }
 
 .-mt-5px {
@@ -830,3 +830,7 @@ transition: all .3s;
 .cp{
     cursor: pointer;
 }
+
+
+
+  
